// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBubble renders assistant message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      {
        "alignItems": "flex-start",
        "marginBottom": 4,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        false,
        {
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "maxWidth": "100%",
          "paddingHorizontal": 0,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <View
      style={
        {
          "paddingVertical": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
            "marginBottom": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#9CA6E0",
              "borderRadius": 1.5,
              "height": 8,
              "transform": [
                {
                  "rotate": "45deg",
                },
              ],
              "width": 8,
            }
          }
        />
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "rgba(46, 85, 64, 0.55)",
                "fontFamily": "Inter-Medium",
                "fontSize": 10.5,
                "fontWeight": "600",
                "letterSpacing": 0.6,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          GREMLY
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "#1F1F1F",
                "fontSize": 16,
                "letterSpacing": -0.2,
                "lineHeight": 25,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#1F1F1F",
                  "letterSpacing": -0.2,
                },
              ]
            }
          >
            Hi there! This is an assistant response with some longer text to test the bubble styling.
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ChatBubble renders system message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        false,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 25,
            },
            false,
          ],
        ]
      }
    >
      System notification message
    </Text>
  </View>
</View>
`;

exports[`ChatBubble renders user message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      {
        "alignItems": "flex-end",
        "marginBottom": 16,
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        {
          "alignSelf": "flex-end",
          "backgroundColor": "#2E5540",
          "borderBottomLeftRadius": 16,
          "borderBottomRightRadius": 4,
          "borderTopLeftRadius": 16,
          "borderTopRightRadius": 16,
          "elevation": 1,
          "maxWidth": "85%",
          "paddingHorizontal": 14,
          "paddingVertical": 10,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 3,
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 25,
            },
            {
              "color": "#FFFFFF",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": -0.2,
              "lineHeight": 25,
            },
          ],
        ]
      }
    >
      Hello, this is a user message!
    </Text>
  </View>
</View>
`;

exports[`ChatBubble streaming state renders streaming cursor when isStreaming is true 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      {
        "alignItems": "flex-start",
        "marginBottom": 4,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 14,
          "paddingVertical": 10,
        },
        false,
        {
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "maxWidth": "100%",
          "paddingHorizontal": 0,
          "paddingVertical": 4,
        },
      ]
    }
  >
    <View
      style={
        {
          "paddingVertical": 2,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
            "marginBottom": 6,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#9CA6E0",
              "borderRadius": 1.5,
              "height": 8,
              "transform": [
                {
                  "rotate": "45deg",
                },
              ],
              "width": 8,
            }
          }
        />
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "rgba(46, 85, 64, 0.55)",
                "fontFamily": "Inter-Medium",
                "fontSize": 10.5,
                "fontWeight": "600",
                "letterSpacing": 0.6,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          GREMLY
        </Text>
      </View>
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 22.4,
              },
              {
                "color": "#1F1F1F",
                "fontSize": 16,
                "letterSpacing": -0.2,
                "lineHeight": 25,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#1F1F1F",
                  "letterSpacing": -0.2,
                },
              ]
            }
          >
            Hi there! This is an assistant response with some longer text to test the bubble styling.
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginTop": 4,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "justifyContent": "center",
                "marginBottom": 2,
                "marginLeft": 6,
              },
              {
                "height": 20,
                "width": 20,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "position": "absolute",
                },
                {
                  "backgroundColor": "#E0C47A",
                  "borderRadius": 10,
                  "height": 20,
                  "width": 20,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              [
                {
                  "elevation": 4,
                  "position": "absolute",
                  "shadowColor": "#E0C47A",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0.5,
                  "shadowRadius": 4,
                },
                {
                  "backgroundColor": "#E0C47A",
                  "borderRadius": 5,
                  "height": 10,
                  "width": 10,
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
